Enable CORS and JWT security
This commit configures Spring Security as a stateless JWT-based API, adds the JWT authentication filter before UsernamePasswordAuthenticationFilter, permits login/register and OPTIONS preflight requests, and exposes CORS settings for configured origins with credentials and broader method/header support.